tests/snapshots/snapshot_tests__array_init_nondet_vars2.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_init_nondet_vars2.vmt",
    status: Panic,
    used_instantiations: [],
}
