tests/snapshots/snapshot_tests__array_init_nondet_vars_plus_ind.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_init_nondet_vars_plus_ind.vmt",
    status: Timeout,
    used_instantiations: [],
}
