tests/snapshots/snapshot_tests__array_init_pair_sum.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_init_pair_sum.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int a Z Z) Z) Z)",
        "(= (Read-Int-Int (Write-Int-Int c Z 32279) Z) 32279)",
        "(= (Read-Int-Int (Write-Int-Int c Z 1324) Z) 1324)",
        "(= (Read-Int-Int (Write-Int-Int c Z 44896) Z) 44896)",
        "(= (Read-Int-Int (Write-Int-Int c Z 16908) Z) 16908)",
        "(= (Read-Int-Int (Write-Int-Int b Z N) Z) N)",
        "(= (Read-Int-Int (Write-Int-Int c Z 3) Z) 3)",
        "(= (Read-Int-Int (Write-Int-Int c Z N) Z) N)",
        "(= (Read-Int-Int (Write-Int-Int c Z N) Z) (Read-Int-Int c Z))",
        "(= (Read-Int-Int (Write-Int-Int a Z Z) Z) (Read-Int-Int a Z))",
        "(= (Read-Int-Int (Write-Int-Int a_next Z i) Z) i)",
        "(= (Read-Int-Int (Write-Int-Int c Z 12213) Z) 12213)",
        "(= (Read-Int-Int (Write-Int-Int a Z N) Z) N)",
        "(= (Read-Int-Int (Write-Int-Int c Z 17067) Z) 17067)",
        "(= (Read-Int-Int (Write-Int-Int c Z 23612) Z) 23612)",
        "(= (Read-Int-Int (Write-Int-Int c Z 17068) Z) 17068)",
        "(= (Read-Int-Int (Write-Int-Int c Z 841) Z) 841)",
        "(= (Read-Int-Int (Write-Int-Int c Z 1105) Z) 1105)",
        "(= (Read-Int-Int (Write-Int-Int a i Z) i) Z)",
        "(= (Read-Int-Int (Write-Int-Int c Z 1103) Z) 1103)",
        "(= (Read-Int-Int (Write-Int-Int c Z 7579) Z) 7579)",
        "(= (Read-Int-Int (Write-Int-Int a N Z) N) Z)",
        "(= (Read-Int-Int (Write-Int-Int c Z Z) Z) Z)",
        "(= (Read-Int-Int (Write-Int-Int c Z 24389) Z) 24389)",
        "(= (Read-Int-Int (Write-Int-Int c Z 12262) Z) 12262)",
        "(= (Read-Int-Int (Write-Int-Int c Z 32279) Z) (Read-Int-Int c Z))",
    ],
}
