tests/snapshots/snapshot_tests__array_init_pair_sum_const.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_init_pair_sum_const.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int a Z Z) Z) Z)",
        "(= (Read-Int-Int (Write-Int-Int c Z 18588) Z) 18588)",
        "(= (Read-Int-Int (Write-Int-Int b Z N) Z) N)",
        "(= (Read-Int-Int (Write-Int-Int c Z 3) Z) 3)",
        "(= (Read-Int-Int (Write-Int-Int c Z N) Z) N)",
        "(= (Read-Int-Int (Write-Int-Int b Z Z) Z) Z)",
        "(= (Read-Int-Int (Write-Int-Int a_next Z i) Z) i)",
        "(= (Read-Int-Int (Write-Int-Int a Z Z) Z) (Read-Int-Int a Z))",
        "(= (Read-Int-Int (Write-Int-Int b Z Z) Z) (Read-Int-Int b Z))",
        "(= (Read-Int-Int (Write-Int-Int c Z 18588) Z) (Read-Int-Int c Z))",
        "(= (Read-Int-Int (Write-Int-Int c Z pc) Z) pc)",
        "(= (Read-Int-Int (Write-Int-Int c Z Z) Z) Z)",
        "(= (Read-Int-Int (Write-Int-Int c Z 6) Z) 6)",
    ],
}
