tests/snapshots/snapshot_tests__array_init_pair_symmetr.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_init_pair_symmetr.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!13 Z (Read-Int-Int a Z)) Z) (Read-Int-Int a Z))",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!13 Z (Read-Int-Int a Z)) Z) (Read-Int-Int Array-Int-Int!val!13 Z))",
    ],
}
